# paper-analyzer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  setup.py
analyzer/: admin.py  middleware.py  models.py  ppt_generator.py  ppt_generator.py.backup  services.py  services.py.bak  views.py
analyzer/migrations/: 0001_initial.py  0002_alter_paperanalysis_pdf_file.py  0003_paperanalysis_authors_paperanalysis_introduction_and_more.py  0004_remove_paperanalysis_student_id_and_more.py
paper_analyzer/: asgi.py  settings.py  terminal.py  urls.py  wsgi.py
templates/: analysis_detail.html  analysis_history.html  analysis_pdf.html  analyzer.html  base.html  generator.html  layout.html  login.html  ppt_detail.html  ppt_history.html
